--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
 <body>
 <header class="globalHeader">
   <div class="webTop">
-    <div class="webContents">
-      <svg class="icon1">
+    <div>
+      <svg class="webContents">
         <use xlink:href="#icon-contents">
         </use>
       </svg>
